# emlov4_pytorch_lt_session1

./: .gitignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  run.sh
.kaggle/: kaggle.json
Docker/: .dockerignore  Dockerfile  README.md
docs/: docker.md  getting-started.md  index.md  kaggle_guide.md  setup.md
docs/codes/: datamodule.md  dataset_split.md  eval.md  index.md  infer.md  kaggle_downloader.md  logging_utils.md  model.md  train.md
src/: eval.py  infer.py  train.py
src/datamodules/: dogbreed_module.py  split_dataset.py
src/models/: dogbreed_classifier.py
src/utils/: kaggle_downloader.py  logging_utils.py
tests/: test_fixes.py  test_sample.py
